--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     .price-box {margin-bottom: 20px;}
     .price {font-size: 52px;font-weight: bold;color: #FF499E;margin-bottom: 8px;}
     .delivery {font-size: 20px; color: #666;}
-    .buttons {display: flex;gap: 20px;justify-content: flex-end; /* 오른쪽 끝 정렬 */}
+    .buttons {display: flex;gap: 20px;justify-content: flex-end;}
     .buttons button {font-size: 20px;padding: 16px 42px;border: none;border-radius: 14px;background-color: #FF78C0;color: white;cursor: pointer;transition: background-color 0.3s ease}
     .buttons button:hover {background-color: #6758CF;font-weight: bold;}
 
