--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     .kit-section {display: flex;justify-content: center;align-items: flex-start;padding: 120px 60px;gap: 80px;flex-wrap: wrap;}
     .kit-info {display: flex;flex-direction: column;justify-content: space-between;height: 600px;max-width: 600px;color: #333;padding-top: 30px;flex: 1;font-size: 20px;}
     .kit-info .top-text {text-align: left;}
-    .kit-info h1 {font-size: 60px; color: white;margin-bottom: 24px;}
-    .kit-info p {font-size: 22px; color:# black;line-height: 1.7;margin-bottom: 20px;}
+    .kit-info h1 {font-size: 60px; color: white; margin-bottom: 24px;}
+    .kit-info p {font-size: 22px; color:black; line-height: 1.7; margin-bottom: 20px;}
     .bottom {text-align: right;}
     .price-box {margin-bottom: 20px;}
     .price {font-size: 52px;font-weight: bold;color: #FF499E;margin-bottom: 8px;}
