--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     * { box-sizing: border-box; }
     html {scroll-behavior: smooth;}
     body { margin: 0;font-family: ''Pretendard-Regular'', sans-serif; background: linear-gradient(to bottom, #FFD3F7, #C3B2F9);}
-    .navbar {background-color: #FFAAEB;display: flex;justify-content: space-between;align-items: center;padding: 0 30px;height: 48px;}
+    .navbar {position: fixed; top: 0; width: 100%; background-color: #FFAAEB;display: flex;justify-content: space-between;align-items: center;padding: 0 30px;height: 48px;z-index: 1000;}
 
     .logo img { height: 28px; }
     .nav-links { list-style: none; display: flex; margin: 0; padding: 0; height: 100%; }
