--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     html {scroll-behavior: smooth;}
     body { margin: 0;font-family: ''Pretendard-Regular'', sans-serif; background: linear-gradient(to bottom, #FFD3F7, #C3B2F9);}
     .navbar {position: fixed; top: 0; width: 100%; background-color: #FFAAEB;display: flex;justify-content: space-between;align-items: center;padding: 0 30px;height: 48px;z-index: 1000;}
-
     .logo img { height: 28px; }
     .nav-links { list-style: none; display: flex; margin: 0; padding: 0; height: 100%; }
     .nav-links li { height: 100%; }
@@ -44,11 +43,11 @@
     .kit-section {display: flex;justify-content: center;align-items: flex-start;padding: 120px 60px;gap: 80px;flex-wrap: wrap;}
     .kit-info {display: flex;flex-direction: column;justify-content: space-between;height: 600px;max-width: 600px;color: #333;padding-top: 30px;flex: 1;font-size: 20px;}
     .kit-info .top-text {text-align: left;}
-    .kit-info h1 {font-size: 60px; color: white; margin-bottom: 24px;}
-    .kit-info p {font-size: 22px; color:black; line-height: 1.7; margin-bottom: 20px;}
+    .kit-info h1 {font-size: 60px; color: white;margin-bottom: 24px;}
+    .kit-info p {font-size: 22px; color:#4E4E4E;line-height: 1.7;margin-bottom: 20px;}
     .bottom {text-align: right;}
     .price-box {margin-bottom: 20px;}
-    .price {font-size: 52px;font-weight: bold;color: #FF499E;margin-bottom: 8px;}
+    .price {font-size: 52px;font-weight: bold;color:#4E4E4E;margin-bottom: 8px;}
     .delivery {font-size: 20px; color: #666;}
     .buttons {display: flex;gap: 20px;justify-content: flex-end;}
     .buttons button {font-size: 20px;padding: 16px 42px;border: none;border-radius: 14px;background-color: #FF78C0;color: white;cursor: pointer;transition: background-color 0.3s ease}
@@ -58,10 +57,10 @@
     .package-content { text-align: center; max-width: 900px; }
     .package-subtitle {font-size: 32px; color: white; margin: 20px 0 20px 0; text-align: left;}
     .package-content img {width: 100%; border-radius: 12px; margin-bottom: 32px;box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);}
-    .package-text {font-size: 22px; color: white; line-height: 1.6;  margin-bottom: 128px; margin-top:32px; color: black;}
+    .package-text {font-size: 22px; color: white; line-height: 1.6;  margin-bottom: 128px; margin-top:32px; color:#4E4E4E}
 
     .how-to-title {font-size: 60px; color: white; font-weight: bold; margin-bottom: 30px;}
-    .how-to-text {font-size: 22px; color: white; line-height: 1.6;  margin-bottom: 128px; margin-top:64px ; color:  black; }
+    .how-to-text {font-size: 22px; color: white; line-height: 1.6;  margin-bottom: 128px; margin-top:64px ; color:#4E4E4E }
     .how-to{text-align: center; margin-bottom: 0px}
 
     .level { position: relative;height: 100vh;background-size: cover;background-position: center;background-repeat: no-repeat; background-attachment: fixed;display: flex;justify-content: center;align-items: center;}
@@ -75,13 +74,13 @@
     .buy-button:hover {background-color: #6758CF;font-weight: bold;}
 
     .footer {padding: 40px 30px;font-family: 'Pretendard-Regular', sans-serif;color: white}
-    .footer-content {display: flex;justify-content: space-between;flex-wrap: nowrap; gap: 60px;max-width: 1200px; margin: 0 auto;}
-    .footer-left {flex: 1 1 400px;font-size: 14px;color: white;}
-    .footer-left p {margin: 6px 0;font-size: 14px;color: white;}
+    .footer-content {display: flex;justify-content: space-between;flex-wrap: nowrap; gap: 60px;max-width: 1400px; margin: 0 auto;}
+    .footer-left {flex: 1 1 400px;font-size: 16px;color: white;}
+    .footer-left p {margin: 6px 0;font-size: 16px;color: white;}
     .footer-logo {height: 40px;margin-bottom: 16px;}
     .footer-right {display: flex;gap: 60px;flex: none;justify-content: flex-end;flex-wrap: nowrap;}
     .footer-col { min-width: 180px;}
-    .footer-col h4 {font-size: 16px;font-weight: bold;color: white; margin-bottom: 16px;white-space: nowrap;}
+    .footer-col h4 {font-size: 18px;font-weight: bold;color: white; margin-bottom: 16px;white-space: nowrap;}
     .footer-col ul { list-style: none;padding: 0;margin: 0;}
     .footer-col li {margin-bottom: 10px;color: #EDEDED;font-size: 16px;}
     .footer-divider {border: none; border-top: 1px solid white;margin: 40px 0 20px;width: 100%;}
@@ -158,7 +157,7 @@
       지금부터 다마고치를 어떻게 키우면 되는지 설명해드릴게요!
     </p>
   </div>
-</section>
+  </section>
 
 <section class="level" id="howto" style="background-image: url('부화00.png');">
   <h1 class="title tmon">FIRST</h1>
