--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     .kit-info p {font-size: 22px; color:#4E4E4E;line-height: 1.7;margin-bottom: 20px;}
     .bottom {text-align: right;}
     .price-box {margin-bottom: 20px;}
-    .price {font-size: 52px;font-weight: bold;color:#4E4E4E;margin-bottom: 8px;}
+    .price {font-size: 52px;font-weight: bold;color:#FF309E; margin-bottom: 8px;}
     .delivery {font-size: 20px; color: #666;}
     .buttons {display: flex;gap: 20px;justify-content: flex-end;}
     .buttons button {font-size: 20px;padding: 16px 42px;border: none;border-radius: 14px;background-color: #FF78C0;color: white;cursor: pointer;transition: background-color 0.3s ease}
