--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 
     * { box-sizing: border-box; }
     html {scroll-behavior: smooth;}
-    body { margin: 0;font-family: ''Pretendard-Regular'', sans-serif; background: linear-gradient(to bottom, #FFD3F7, #C3B2F9);}
+    body {margin: 0;font-family: 'Pretendard-Regular', sans-serif;background: linear-gradient(to bottom, #FFD3F7, #C3B2F9);background-attachment: fixed;background-repeat: no-repeat;background-size: 100% auto;}
+
     .navbar {position: fixed; top: 0; width: 100%; background-color: #FFAAEB;display: flex;justify-content: space-between;align-items: center;padding: 0 30px;height: 48px;z-index: 1000;}
     .logo img { height: 28px; }
     .nav-links { list-style: none; display: flex; margin: 0; padding: 0; height: 100%; }
     .nav-links li { height: 100%; }
-    .nav-links li a {display: flex; align-items: center;height: 100%; padding: 0 30px;text-decoration: none; color: white;font-size: 14px; transition: background-color 0.2s, font-weight 0.2s;}
+    .nav-links li a {display: flex; align-items: center;height: 100%; padding: 0 30px;text-decoration: none; color: white;font-size: 15px; transition: background-color 0.2s, font-weight 0.2s;}
     .nav-links li:hover a { background-color: #6758CF; font-weight: bold; }
 
     .kit-section {display: flex; justify-content: center; align-items: center;padding: 60px 30px;}
@@ -47,7 +48,7 @@
     .kit-info p {font-size: 22px; color:#4E4E4E;line-height: 1.7;margin-bottom: 20px;}
     .bottom {text-align: right;}
     .price-box {margin-bottom: 20px;}
-    .price {font-size: 52px;font-weight: bold;color:#FF309E; margin-bottom: 8px;}
+    .price {font-size: 52px;font-weight: bold;color:#FF309E;margin-bottom: 8px;}
     .delivery {font-size: 20px; color: #666;}
     .buttons {display: flex;gap: 20px;justify-content: flex-end;}
     .buttons button {font-size: 20px;padding: 16px 42px;border: none;border-radius: 14px;background-color: #FF78C0;color: white;cursor: pointer;transition: background-color 0.3s ease}
