--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
       <img src="로고.png">
     </div>
     <ul class="nav-links">
-      <li><a href="#">제품소개</a></li>
+      <li><a href="https://overdoseoxx.github.io/class_9week/" target="_blank">제품소개</a></li>
       <li><a href="#Product">구성품</a></li>
       <li><a href="#howto">키우는 법</a></li>
-      <li><a href="#">이용후기</a></li>
+      <li><a href="https://overdoseoxx.github.io/class_9week/" target="_blank">">이용후기</a></li>
       <li><a href="#buy">구매하기</a></li>
     </ul>
   </nav>
