--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <li><a href="https://overdoseoxx.github.io/class_9week/" target="_blank">제품소개</a></li>
       <li><a href="#Product">구성품</a></li>
       <li><a href="#howto">키우는 법</a></li>
-      <li><a href="https://overdoseoxx.github.io/class_9week/" target="_blank">">이용후기</a></li>
+      <li><a href="https://overdoseoxx.github.io/class_9week/" target="_blank">이용후기</a></li>
       <li><a href="#buy">구매하기</a></li>
     </ul>
   </nav>
